# rimay-type

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  package.json  rimay-type.service
.github/workflows/: release.yml
src/: application.rs  audio.rs  groq_client.rs  hotkey_listener.rs  lib.rs  main.rs  settings.rs
