[package]
name = "rimay-type"
version = "0.2.1"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync"] }
anyhow = "1.0"
global-hotkey = "0.7"
gtk = "0.18"
image = "0.25"
tray-icon = "0.21"
glib = "0.21"
async-channel = "2.5"
cpal = "0.16"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "multipart",
] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
enigo = "0.6"
config = { version = "0.15", default-features = false, features = ["toml"] }
toml = "0.9"
directories = "6.0"
itertools = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ctrlc = "3.5"
secrecy = { version = "0.10.3", features = ["serde"] }
